hello/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: hub.softleader.com.tw
      containers:
      - name: hello
        image: "hub.softleader.com.tw/hello:0.0.1-nanshan"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        livenessProbe:
          httpGet:
            path: /info
            port: 8080
          initialDelaySeconds: 60
        resources:
          requests:
            cpu: 0
            memory: 256Mi
          limits:
            cpu: 2
            memory: 1024Mi
