hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 80
