hello/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: hello
              servicePort: 8080
